--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-REACT_APP_API_ENDPOINT = "http://localhost:3000/"
+REACT_APP_API_ENDPOINT = "https://jwilliamson-top-100-movies-api.herokuapp.com/"
